--- a/index.html
+++ b/index.html
@@ -330,42 +330,47 @@
 
   <section id="testimonials">
   <h2>Wat zeggen onze partners?</h2>
-  <div class="testimonial-carousel" id="testimonialCarousel">
+<div class="testimonial-carousel" id="testimonialCarousel">
 
-    <div class="testimonial active">
-      <p>“Schmidt Analytics hielp ons om onze data écht strategisch in te zetten.”</p>
-      <div class="client-info">
-        <img src="https://via.placeholder.com/60" alt="Bedrijfslogo A" />
-        <div>
-          <strong>J. de Vries</strong><br />
-          <span>Data Manager, Bedrijf A</span>
-        </div>
+  <div class="testimonial active">
+    <p>“Schmidt Analytics hielp ons om onze data écht strategisch in te zetten.”</p>
+    <div class="client-info">
+      <img src="https://via.placeholder.com/60" alt="Bedrijfslogo A" />
+      <div>
+        <strong>J. de Vries</strong><br />
+        <span>Data Manager, Bedrijf A</span>
       </div>
     </div>
-
-    <div class="testimonial">
-      <p>“Heldere dashboards, snelle levering, en altijd gericht op de vraag.”</p>
-      <div class="client-info">
-        <img src="https://via.placeholder.com/60" alt="Bedrijfslogo B" />
-        <div>
-          <strong>M. Janssen</strong><br />
-          <span>Operations, Bedrijf B</span>
-        </div>
-      </div>
-    </div>
-
-    <div class="testimonial">
-      <p>“Door hun ondersteuning zijn we veel efficiënter gaan rapporteren.”</p>
-      <div class="client-info">
-        <img src="https://via.placeholder.com/60" alt="Bedrijfslogo C" />
-        <div>
-          <strong>A. Willems</strong><br />
-          <span>Directeur, Bedrijf C</span>
-        </div>
-      </div>
-    </div>
-
   </div>
+
+  <div class="testimonial">
+    <p>“Heldere dashboards, snelle levering, en altijd gericht op de vraag.”</p>
+    <div class="client-info">
+      <img src="https://via.placeholder.com/60" alt="Bedrijfslogo B" />
+      <div>
+        <strong>M. Janssen</strong><br />
+        <span>Operations, Bedrijf B</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="testimonial">
+    <p>“Door hun ondersteuning zijn we veel efficiënter gaan rapporteren.”</p>
+    <div class="client-info">
+      <img src="https://via.placeholder.com/60" alt="Bedrijfslogo C" />
+      <div>
+        <strong>A. Willems</strong><br />
+        <span>Directeur, Bedrijf C</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="testimonial-controls">
+    <button id="prevTestimonial" aria-label="Vorige testimonial">&#8592;</button>
+    <button id="nextTestimonial" aria-label="Volgende testimonial">&#8594;</button>
+  </div>
+
+</div>
 </section>
 
   <section id="diensten">
