--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --primary: #000099;   /* Donkerblauw */
-      --accent: #CC0000;    /* Rood */
-      --support: #67AB9F;   /* Groen */
+      --primary: #000099;
+      --accent: #CC0000;
+      --support: #67AB9F;
       --bg: #F9F9F9;
       --text: #222;
     }
@@ -29,13 +29,20 @@
 
     header {
       background-color: white;
-      padding: 1rem;
       border-bottom: 3px solid var(--support);
-      text-align: center;
     }
 
-    header img {
-      height: 60px;
+    .header-container {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 1rem;
+    }
+
+    .header-container img {
+      height: 80px;
     }
 
     nav {
@@ -49,18 +56,7 @@
     .nav-container {
       max-width: 1000px;
       margin: 0 auto;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
       padding: 0.5rem 1rem;
-    }
-
-    .menu-toggle {
-      display: none;
-      font-size: 1.5rem;
-      background: none;
-      border: none;
-      cursor: pointer;
     }
 
     .nav-links {
@@ -72,22 +68,33 @@
       text-decoration: none;
       color: var(--primary);
       font-weight: bold;
+      transition: color 0.3s ease, transform 0.2s ease;
     }
 
     .nav-links a:hover {
       color: var(--accent);
+      transform: scale(1.05);
+    }
+
+    .menu-toggle {
+      display: none;
     }
 
     @media (max-width: 768px) {
       .menu-toggle {
         display: block;
+        font-size: 1.5rem;
+        background: none;
+        border: none;
+        cursor: pointer;
+        color: var(--primary);
       }
 
       .nav-links {
         display: none;
         flex-direction: column;
-        background-color: white;
-        padding: 1rem;
+        gap: 1rem;
+        padding: 1rem 0;
       }
 
       .nav-links.active {
@@ -110,33 +117,31 @@
       line-height: 1.6;
     }
 
-    .cta-button {
-      background-color: var(--accent);
-      color: white;
-      border: none;
-      padding: 1rem 2rem;
-      font-size: 1rem;
-      border-radius: 30px;
-      cursor: pointer;
-      transition: background-color 0.3s ease, box-shadow 0.3s ease, transform 0.2s ease;
-      box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
-      z-index: 999;
-    }
+    
+.cta-button {
+  background-color: var(--support); /* Groen */
+  color: white;
+  border: none;
+  padding: 1rem 2rem;
+  font-size: 1rem;
+  border-radius: 30px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease, transform 0.2s ease;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+  z-index: 999;
+}
 
-    .cta-button:hover {
-      background-color: var(--primary);
-      transform: scale(1.05);
-    }
+.cta-button:hover {
+  background-color: var(--primary);
+  transform: scale(1.05);
+}
 
-    .cta-fixed {
-      position: fixed;
-      bottom: 2rem;
-      right: 2rem;
-    }
+.cta-fixed {
+  position: fixed;
+  bottom: 2rem;
+  left: 2rem;
+}
 
-    #over-ons {
-      background-color: #f0fafa;
-    }
 
     footer {
       background-color: #eee;
@@ -145,255 +150,19 @@
       font-size: 0.9rem;
       color: #555;
     }
-
-    @media (max-width: 600px) {
-      h1 {
-        font-size: 1.5rem;
-      }
-
-      .cta-fixed {
-        right: 1rem;
-        bottom: 1rem;
-        padding: 1rem 1.6rem;
-        font-size: 1rem;
-        border-radius: 50px;
-        white-space: nowrap;
-      }
-
-      section {
-        padding: 1.5rem 1rem;
-      }
-
-      nav {
-        flex-direction: column;
-        align-items: center;
-      }
-    }
-
-    /* Popup formulier */
-    .form-overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 153, 0.8); /* aangepast naar huisstijl blauw */
-      display: none;
-      justify-content: center;
-      align-items: center;
-      z-index: 2000;
-    }
-
-    .form-overlay.active {
-      display: flex;
-    }
-
-    .form-container {
-      background: white;
-      padding: 2rem;
-      border-radius: 12px;
-      max-width: 400px;
-      width: 90%;
-      position: relative;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-      animation: fadeIn 0.3s ease;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    .close-btn {
-      position: absolute;
-      top: 0.8rem;
-      right: 1rem;
-      background: none;
-      border: none;
-      font-size: 1.5rem;
-      color: var(--primary);
-      cursor: pointer;
-    }
-
-    form label {
-      display: flex;
-      align-items: center;
-      margin-bottom: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 30px;
-      padding: 0.6rem 1rem;
-    }
-
-    form input {
-      border: none;
-      outline: none;
-      flex: 1;
-      font-size: 1rem;
-      padding-left: 0.5rem;
-    }
-
-    .icon {
-      color: var(--primary);
-      font-size: 1.2rem;
-    }
-
-    .privacy {
-      font-size: 0.8rem;
-      margin-top: 1rem;
-      color: #666;
-    }
-
-#testimonials {
-  background-color: #fff;
-  text-align: center;
-  padding: 3rem 1rem;
-}
-
-.testimonial-carousel {
-  position: relative;
-  max-width: 600px;
-  margin: 0 auto;
-  min-height: 160px;
-}
-
-.testimonial {
-  display: none;
-  opacity: 0;
-  transition: opacity 0.5s ease;
-}
-
-.testimonial.active {
-  display: block;
-  opacity: 1;
-}
-
-.testimonial p {
-  font-style: italic;
-  font-size: 1.1rem;
-  margin-bottom: 0.5rem;
-  color: var(--primary);
-}
-
-.client-info {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1rem;
-  margin-top: 1rem;
-}
-
-.client-info img {
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  object-fit: contain;
-  border: 2px solid var(--support);
-  background: white;
-}
-
-.client-info div {
-  text-align: left;
-  font-size: 0.9rem;
-  line-height: 1.3;
-}
-
-.client-info strong {
-  color: var(--text);
-}
-.testimonial-controls {
-  margin-top: 1rem;
-  display: flex;
-  justify-content: center;
-  gap: 1rem;
-}
-
-.testimonial-controls button {
-  background-color: var(--primary);
-  color: white;
-  border: none;
-  padding: 0.5rem 1rem;
-  font-size: 1.2rem;
-  border-radius: 8px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.testimonial-controls button:hover {
-  background-color: var(--accent);
-}
-.hero {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  gap: 2rem;
-}
-
-.hero-text {
-  flex: 1 1 60%;
-}
-
-.hero-icon img {
-  max-width: 100px;
-  animation: float 4s ease-in-out infinite;
-}
-
-.sub {
-  font-size: 1.2rem;
-  color: var(--support);
-  margin-bottom: 1rem;
-}
-
-/* Hover/microanimaties */
-.cta-button:hover {
-  transform: scale(1.07);
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-.nav-links a {
-  transition: color 0.3s ease, transform 0.2s ease;
-}
-
-.nav-links a:hover {
-  transform: scale(1.05);
-}
-
-ul li {
-  transition: transform 0.2s ease;
-}
-ul li:hover {
-  transform: translateX(4px);
-}
-
-/* Hero icon animation */
-@keyframes float {
-  0% { transform: translateY(0px); }
-  50% { transform: translateY(-8px); }
-  100% { transform: translateY(0px); }
-}
-
-@media (max-width: 768px) {
-  .hero {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  .hero-icon {
-    align-self: center;
-  }
-}
-
   </style>
 </head>
 <body>
 
   <header>
-    <img src="https://schmidtanalytics.github.io/Logo.png" alt="Schmidt Analytics logo" />
+    <div class="header-container">
+      <img src="https://schmidtanalytics.github.io/Logo.png" alt="Schmidt Analytics logo" />
+      <button class="menu-toggle" aria-label="Menu openen/sluiten" aria-expanded="false">&#9776;</button>
+    </div>
   </header>
 
   <nav role="navigation">
     <div class="nav-container">
-      <button class="menu-toggle" aria-label="Hoofdmenu openen/sluiten" aria-expanded="false">&#9776;</button>
       <div class="nav-links" id="navLinks">
         <a href="#home">Home</a>
         <a href="#diensten">Diensten</a>
@@ -403,66 +172,12 @@ ul li:hover {
     </div>
   </nav>
 
-<section id="home">
-  <div class="hero">
-    <div class="hero-text">
-      <h1>Uw partner in een datagedreven wereld</h1>
-      <p class="sub">Datagedreven werken, zonder ruis.</p>
-      <p>
-        Schmidt Analytics is gespecialiseerd in data-analyse, data engineering, Power BI-ontwikkeling en advies. Wij bouwen oplossingen vanuit de vraag – niet vanuit de techniek.
-      </p>
-      <a href="#contact"><button class="cta-button">Neem contact op</button></a>
-    </div>
-    <div class="hero-icon">
-      <img src="https://img.icons8.com/ios-filled/100/000099/combo-chart.png" alt="Data visualisatie icoon" loading="lazy" />
-    </div>
-  </div>
-</section>
-
-  <section id="testimonials">
-  <h2>Wat zeggen onze partners?</h2>
-<div class="testimonial-carousel" id="testimonialCarousel">
-
-  <div class="testimonial active">
-    <p>“Schmidt Analytics hielp ons om onze data écht strategisch in te zetten.”</p>
-    <div class="client-info">
-      <img src="https://via.placeholder.com/60" alt="Bedrijfslogo A" />
-      <div>
-        <strong>J. de Vries</strong><br />
-        <span>Data Manager, Bedrijf A</span>
-      </div>
-    </div>
-  </div>
-
-  <div class="testimonial">
-    <p>“Heldere dashboards, snelle levering, en altijd gericht op de vraag.”</p>
-    <div class="client-info">
-      <img src="https://via.placeholder.com/60" alt="Bedrijfslogo B" />
-      <div>
-        <strong>M. Janssen</strong><br />
-        <span>Operations, Bedrijf B</span>
-      </div>
-    </div>
-  </div>
-
-  <div class="testimonial">
-    <p>“Door hun ondersteuning zijn we veel efficiënter gaan rapporteren.”</p>
-    <div class="client-info">
-      <img src="https://via.placeholder.com/60" alt="Bedrijfslogo C" />
-      <div>
-        <strong>A. Willems</strong><br />
-        <span>Directeur, Bedrijf C</span>
-      </div>
-    </div>
-  </div>
-
-  <div class="testimonial-controls">
-    <button id="prevTestimonial" aria-label="Vorige testimonial">&#8592;</button>
-    <button id="nextTestimonial" aria-label="Volgende testimonial">&#8594;</button>
-  </div>
-
-</div>
-</section>
+  <section id="home">
+    <h1>Uw partner in een datagedreven wereld</h1>
+    <p>
+      Schmidt Analytics is gespecialiseerd in data-analyse, data engineering, Power BI-ontwikkeling en advies. Wij bouwen oplossingen vanuit de vraag – niet vanuit de techniek.
+    </p>
+  </section>
 
   <section id="diensten">
     <h2>Diensten</h2>
@@ -493,90 +208,18 @@ ul li:hover {
     &copy; 2025 Schmidt Analytics B.V.
   </footer>
 
-  <!-- CTA knop -->
+  <!-- Sticky CTA knop -->
   <button class="cta-button cta-fixed" id="openFormBtn">Vragen? We komen graag met je in contact!</button>
 
-  <!-- Popup formulier -->
-  <div class="form-overlay" id="formOverlay">
-    <div class="form-container">
-      <button class="close-btn" id="closeFormBtn">&times;</button>
-      <h2>Laat je gegevens achter</h2>
-      <form id="contactForm">
-        <label>
-          <span class="icon">👤</span>
-          <input type="text" name="naam" placeholder="Naam" required />
-        </label>
-        <label>
-          <span class="icon">📧</span>
-          <input type="email" name="email" placeholder="E-mailadres" required />
-        </label>
-        <label>
-          <span class="icon">📞</span>
-          <input type="tel" name="telefoon" placeholder="Telefoonnummer" required />
-        </label>
-        <button type="submit" class="cta-button">Verstuur</button>
-        <p class="privacy">Met het indienen van dit formulier geef je Schmidt Analytics B.V. toestemming om deze gegevens te verwerken.</p>
-      </form>
-    </div>
-  </div>
-
-  <!-- JavaScript -->
   <script>
     const menuToggle = document.querySelector('.menu-toggle');
     const navLinks = document.getElementById('navLinks');
-    const openBtn = document.getElementById('openFormBtn');
-    const closeBtn = document.getElementById('closeFormBtn');
-    const overlay = document.getElementById('formOverlay');
-    const form = document.getElementById('contactForm');
 
     menuToggle.addEventListener('click', () => {
       navLinks.classList.toggle('active');
       menuToggle.setAttribute('aria-expanded', navLinks.classList.contains('active'));
     });
-
-    openBtn.addEventListener('click', () => {
-      overlay.classList.add('active');
-    });
-
-    closeBtn.addEventListener('click', () => {
-      overlay.classList.remove('active');
-    });
-
-    form.addEventListener('submit', (e) => {
-      e.preventDefault();
-      const naam = form.naam.value;
-      const email = form.email.value;
-      const telefoon = form.telefoon.value;
-      const mailBody = `Naam: ${naam}%0DE-mail: ${email}%0DTelefoonnummer: ${telefoon}`;
-      window.location.href = `mailto:info@schmidt-analytics.nl?subject=Contactformulier&body=${mailBody}`;
-    });
   </script>
-<script>
-<script>
-  const testimonials = document.querySelectorAll('.testimonial');
-  let testimonialIndex = 0;
-
-  function updateTestimonial(index) {
-    testimonials.forEach(t => t.classList.remove('active'));
-    testimonials[index].classList.add('active');
-  }
-
-  function showNextTestimonial() {
-    testimonialIndex = (testimonialIndex + 1) % testimonials.length;
-    updateTestimonial(testimonialIndex);
-  }
-
-  function showPrevTestimonial() {
-    testimonialIndex = (testimonialIndex - 1 + testimonials.length) % testimonials.length;
-    updateTestimonial(testimonialIndex);
-  }
-
-  document.getElementById('nextTestimonial').addEventListener('click', showNextTestimonial);
-  document.getElementById('prevTestimonial').addEventListener('click', showPrevTestimonial);
-
-  setInterval(showNextTestimonial, 5000);
-</script>
 
 </body>
 </html>
-
