--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="nl">
 <head>
@@ -195,6 +196,47 @@
     <p>
       Wij zijn een team van data-experts met passie voor eenvoud en effectiviteit. Onze aanpak is pragmatisch: we beginnen bij uw vraag en bouwen van daaruit een passende oplossing. Ons doel is om organisaties écht datagedreven te laten werken.
     </p>
+  </section>
+
+  
+  <section id="testimonials">
+    <h2>Wat zeggen onze klanten?</h2>
+    <div class="testimonial-carousel" id="testimonialCarousel">
+      <div class="testimonial active">
+        <p>“Schmidt Analytics hielp ons om onze data écht strategisch in te zetten.”</p>
+        <div class="client-info">
+          <img src="https://via.placeholder.com/60" alt="Bedrijfslogo A" />
+          <div>
+            <strong>J. de Vries</strong><br />
+            <span>Data Manager, Bedrijf A</span>
+          </div>
+        </div>
+      </div>
+      <div class="testimonial">
+        <p>“Heldere dashboards, snelle levering, en altijd gericht op de vraag.”</p>
+        <div class="client-info">
+          <img src="https://via.placeholder.com/60" alt="Bedrijfslogo B" />
+          <div>
+            <strong>M. Janssen</strong><br />
+            <span>Operations, Bedrijf B</span>
+          </div>
+        </div>
+      </div>
+      <div class="testimonial">
+        <p>“Door hun ondersteuning zijn we veel efficiënter gaan rapporteren.”</p>
+        <div class="client-info">
+          <img src="https://via.placeholder.com/60" alt="Bedrijfslogo C" />
+          <div>
+            <strong>A. Willems</strong><br />
+            <span>Directeur, Bedrijf C</span>
+          </div>
+        </div>
+      </div>
+      <div class="testimonial-controls">
+        <button id="prevTestimonial" aria-label="Vorige testimonial">&#8592;</button>
+        <button id="nextTestimonial" aria-label="Volgende testimonial">&#8594;</button>
+      </div>
+    </div>
   </section>
 
   <section id="contact">
