--- a/index.html
+++ b/index.html
@@ -191,16 +191,8 @@
     </ul>
   </section>
 
-  <section id="over-ons">
-    <h2>Over ons</h2>
-    <p>
-      Wij zijn een team van data-experts met passie voor eenvoud en effectiviteit. Onze aanpak is pragmatisch: we beginnen bij uw vraag en bouwen van daaruit een passende oplossing. Ons doel is om organisaties écht datagedreven te laten werken.
-    </p>
-  </section>
-
-  
   <section id="testimonials">
-    <h2>Wat zeggen onze klanten?</h2>
+    <h2>Wat onze partners zeggen</h2>
     <div class="testimonial-carousel" id="testimonialCarousel">
       <div class="testimonial active">
         <p>“Schmidt Analytics hielp ons om onze data écht strategisch in te zetten.”</p>
@@ -238,6 +230,15 @@
       </div>
     </div>
   </section>
+  <section id="over-ons">
+    <h2>Over ons</h2>
+    <p>
+      Wij zijn een team van data-experts met passie voor eenvoud en effectiviteit. Onze aanpak is pragmatisch: we beginnen bij uw vraag en bouwen van daaruit een passende oplossing. Ons doel is om organisaties écht datagedreven te laten werken.
+    </p>
+  </section>
+
+  
+  
 
   <section id="contact">
     <h2>Contact</h2>
