--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="nl">
 <head>
@@ -30,7 +29,9 @@
 
     header {
       background-color: white;
-      border-bottom: 3px solid var(--support);
+      padding: 1rem;
+      text-align: center;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
     }
 
     .header-container {
@@ -237,9 +238,6 @@
     </p>
   </section>
 
-  
-  
-
   <section id="contact">
     <h2>Contact</h2>
     <p>
@@ -266,3 +264,4 @@
 
 </body>
 </html>
+
