--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     header {
       background-color: white;
-      padding: 0.2rem 1rem;
+      padding: 0rem 1rem 0.2rem;
       text-align: center;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
     }
@@ -121,20 +121,21 @@
 
     
 
+
 .cta-button {
   background-color: var(--support);
   color: white;
   border: none;
-  padding: 1rem 2rem;
-  font-size: 1rem;
-  border-radius: 30px;
+  padding: 1.2rem 2.2rem;
+  font-size: 1.1rem;
+  border-radius: 36px;
   cursor: pointer;
   transition: background-color 0.3s ease, box-shadow 0.3s ease, transform 0.2s ease;
-  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
   z-index: 999;
   text-align: center;
   white-space: normal;
-  line-height: 1.4;
+  line-height: 1.5;
 }
 
 .cta-button:hover {
@@ -146,9 +147,10 @@
   position: fixed;
   bottom: 1rem;
   left: 1rem;
-  max-width: 300px;
+  max-width: 340px;
   width: calc(100% - 2rem);
 }
+
 
 
 
@@ -274,5 +276,6 @@
 
 </body>
 </html>
+
 
 
