--- a/index.html
+++ b/index.html
@@ -161,7 +161,80 @@
       font-size: 0.9rem;
       color: #555;
     }
-  </style>
+  
+.form-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 153, 0.85);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 2000;
+}
+
+.form-overlay.active {
+  display: flex;
+}
+
+.form-container {
+  background: white;
+  padding: 2rem;
+  border-radius: 12px;
+  max-width: 400px;
+  width: 90%;
+  position: relative;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+  animation: fadeIn 0.3s ease;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(20px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+.close-btn {
+  position: absolute;
+  top: 0.8rem;
+  right: 1rem;
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  color: var(--primary);
+  cursor: pointer;
+}
+
+form label {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 30px;
+  padding: 0.6rem 1rem;
+}
+
+form input {
+  border: none;
+  outline: none;
+  flex: 1;
+  font-size: 1rem;
+  padding-left: 0.5rem;
+}
+
+.icon {
+  color: var(--primary);
+  font-size: 1.2rem;
+}
+
+.privacy {
+  font-size: 0.8rem;
+  margin-top: 1rem;
+  color: #666;
+}
+
+</style>
 </head>
 <body>
 
@@ -274,8 +347,60 @@
     });
   </script>
 
+
+<!-- CTA knop -->
+<button class="cta-button cta-fixed" id="openFormBtn">Vragen? We komen graag<br>met je in contact!</button>
+
+<!-- Popup formulier -->
+<div class="form-overlay" id="formOverlay">
+  <div class="form-container">
+    <button class="close-btn" id="closeFormBtn">&times;</button>
+    <h2>Neem contact op</h2>
+    <form id="contactForm">
+      <label>
+        <span class="icon">👤</span>
+        <input type="text" name="naam" placeholder="Naam" required />
+      </label>
+      <label>
+        <span class="icon">📧</span>
+        <input type="email" name="email" placeholder="E-mailadres" required />
+      </label>
+      <label>
+        <span class="icon">📞</span>
+        <input type="tel" name="telefoon" placeholder="Telefoonnummer" required />
+      </label>
+      <button type="submit" class="cta-button">Verstuur</button>
+      <p class="privacy">Met het opsturen van dit formulier geeft u Schmidt Analytics B.V. toestemming om deze gegevens te verwerken voor het opnemen van contact. De gegevens worden hierna verwijderd.</p>
+    </form>
+  </div>
+</div>
+
+
+<script>
+  const openBtn = document.getElementById('openFormBtn');
+  const closeBtn = document.getElementById('closeFormBtn');
+  const overlay = document.getElementById('formOverlay');
+  const form = document.getElementById('contactForm');
+
+  openBtn.addEventListener('click', () => {
+    overlay.classList.add('active');
+  });
+
+  closeBtn.addEventListener('click', () => {
+    overlay.classList.remove('active');
+  });
+
+  form.addEventListener('submit', (e) => {
+    e.preventDefault();
+    alert('Uw gegevens zijn verzonden. We nemen spoedig contact op.');
+    overlay.classList.remove('active');
+    form.reset();
+  });
+</script>
+
 </body>
 </html>
+
 
 
 
