--- a/index.html
+++ b/index.html
@@ -274,7 +274,19 @@ form input {
     </ul>
   </section>
 
-  <section id="testimonials">
+  
+  
+  <section id="usp">
+    <h2>Waarom kiezen voor Schmidt Analytics?</h2>
+    <ul>
+      <li><strong>✔ Ervaren data-experts</strong>: Meer dan 10 jaar ervaring in data-analyse, engineering en BI.</li>
+      <li><strong>✔ Gericht op eenvoud en effectiviteit</strong>: Geen ingewikkelde tools, maar oplossingen die werken.</li>
+      <li><strong>✔ We starten bij de vraag, niet de techniek</strong>: Jouw behoefte is ons uitgangspunt.</li>
+      <li><strong>✔ Volledige ondersteuning</strong>: Van strategie tot implementatie en training.</li>
+    </ul>
+  </section>
+
+<section id="testimonials">
     <h2>Wat onze partners zeggen</h2>
     <div class="testimonial-carousel" id="testimonialCarousel">
       <div class="testimonial active">
@@ -313,7 +325,7 @@ form input {
       </div>
     </div>
   </section>
-  <section id="over-ons">
+<section id="over-ons">
     <h2>Over ons</h2>
     <p>
       Wij zijn een team van data-experts met passie voor eenvoud en effectiviteit. Onze aanpak is pragmatisch: we beginnen bij uw vraag en bouwen van daaruit een passende oplossing. Ons doel is om organisaties écht datagedreven te laten werken.
@@ -406,8 +418,3 @@ form input {
 
 </body>
 </html>
-
-
-
-
-
