--- a/index.html
+++ b/index.html
@@ -277,6 +277,34 @@ form input {
   }
 }
 
+
+@media (max-width: 600px) {
+  .cta-fixed {
+    left: 1rem;
+    right: 1rem;
+    bottom: 1rem;
+    width: auto;
+    max-width: none;
+    text-align: center;
+    font-size: 1.1rem;
+    padding: 1rem;
+  }
+
+  .form-container {
+    width: 90%;
+    padding: 1.5rem;
+  }
+
+  .form-overlay {
+    align-items: flex-start;
+    padding-top: 4rem;
+  }
+
+  .privacy {
+    text-align: left;
+  }
+}
+
 </style>
 </head>
 <body>
