--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ form input {
 
 .usp-item {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   gap: 1rem;
   transform: translateY(10px);
   opacity: 0;
@@ -522,4 +522,3 @@ form input {
 
 </body>
 </html>
-
