--- a/index.html
+++ b/index.html
@@ -105,10 +105,19 @@
     }
 
     section {
-      padding: 2rem 1rem;
-      max-width: 1000px;
-      margin: 0 auto;
-    }
+  width: 100%;
+  padding: 3rem 1rem;
+  max-width: 100%;
+  margin: 0 auto;
+  opacity: 0;
+  transform: translateY(30px);
+  transition: all 0.6s ease-in-out;
+}
+
+section.in-view {
+  opacity: 1;
+  transform: translateY(0);
+}
 
     h1, h2 {
       color: var(--primary);
@@ -523,6 +532,24 @@ form input {
     window.location.href = `mailto:info@schmidt-analytics.nl?subject=Contactformulier&body=${body}`;
     overlay?.classList.remove('active');
     form.reset();
+  });
+</script>
+
+
+<script>
+  const observer = new IntersectionObserver(entries => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        entry.target.classList.add('in-view');
+        observer.unobserve(entry.target);
+      }
+    });
+  }, {
+    threshold: 0.1
+  });
+
+  document.querySelectorAll('section').forEach(section => {
+    observer.observe(section);
   });
 </script>
 
