--- a/index.html
+++ b/index.html
@@ -347,6 +347,25 @@ form input {
   }
 }
 
+
+@media (max-width: 768px) {
+  .testimonial-wrapper {
+    width: 300%;
+  }
+
+  .testimonial {
+    flex: 0 0 100%;
+  }
+
+  .client-info div {
+    font-size: 0.75rem;
+  }
+
+  .testimonial p {
+    font-size: 1rem;
+  }
+}
+
 </style>
 </head>
 <body>
@@ -555,4 +574,5 @@ form input {
 
 </body>
 </html>
+
 
