--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="nl">
 <head>
@@ -438,7 +439,7 @@ form input {
   </section>
 <section id="over-ons">
     <h2>Over ons</h2>
-    <p>
+    <p><strong>Wij geloven dat elke organisatie beter presteert met goed georganiseerde data.</strong><br><br>
       Wij zijn een team van data-experts met passie voor eenvoud en effectiviteit. Onze aanpak is pragmatisch: we beginnen bij uw vraag en bouwen van daaruit een passende oplossing. Ons doel is om organisaties écht datagedreven te laten werken.
     </p>
   </section>
@@ -574,5 +575,4 @@ form input {
 
 </body>
 </html>
-
 
