--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="nl">
 <head>
@@ -367,6 +366,11 @@ form input {
   }
 }
 
+
+.cta-button {
+  transition: opacity 0.4s ease;
+}
+
 </style>
 </head>
 <body>
@@ -573,6 +577,28 @@ form input {
   });
 </script>
 
+
+<script>
+  const ctaBtn = document.getElementById('openFormBtn');
+  let hideTimeout;
+
+  function resetInactivityTimer() {
+    clearTimeout(hideTimeout);
+    ctaBtn.style.opacity = '1';
+    ctaBtn.style.pointerEvents = 'auto';
+
+    hideTimeout = setTimeout(() => {
+      ctaBtn.style.opacity = '0';
+      ctaBtn.style.pointerEvents = 'none';
+    }, 5000);
+  }
+
+  ['mousemove', 'keydown', 'scroll', 'click', 'touchstart'].forEach(evt =>
+    window.addEventListener(evt, resetInactivityTimer)
+  );
+
+  window.addEventListener('load', resetInactivityTimer);
+</script>
+
 </body>
 </html>
-
