--- a/index.html
+++ b/index.html
@@ -288,16 +288,45 @@ form input {
 
 
 @media (max-width: 600px) {
-  .cta-fixed {
-    left: 1rem;
-    right: 1rem;
-    bottom: 1rem;
-    width: auto;
-    max-width: none;
-    text-align: center;
-    font-size: 1.1rem;
-    padding: 1rem;
+  .testimonial-carousel {
+    overflow-x: hidden;
   }
+
+  .testimonial-wrapper {
+    flex-wrap: nowrap;
+    width: 300%;
+  }
+
+  .testimonial {
+    flex: 0 0 100%;
+    max-width: 100%;
+    padding: 1rem;
+    box-sizing: border-box;
+  }
+
+  .client-info div {
+    font-size: 0.75rem;
+  }
+
+  .testimonial p {
+    font-size: 1rem;
+  }
+}
+
+  .form-container {
+    width: 90%;
+    padding: 1.5rem;
+  }
+
+  .form-overlay {
+    align-items: flex-start;
+    padding-top: 4rem;
+  }
+
+  .privacy {
+    text-align: left;
+  }
+}
 
   .form-container {
     width: 90%;
@@ -602,3 +631,4 @@ form input {
 
 </body>
 </html>
+
