--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="nl">
 <head>
@@ -288,9 +289,82 @@ form input {
 
 
 @media (max-width: 600px) {
+  body {
+    padding-bottom: 4rem;
+  }
+
+  section {
+    padding: 2.5rem 1rem;
+    margin-bottom: 1.5rem;
+  }
+
+  h1, h2 {
+    font-size: 1.4rem;
+    line-height: 1.3;
+    text-align: center;
+  }
+
+  .cta-fixed {
+    left: 1rem;
+    right: 1rem;
+    bottom: 1rem;
+    width: auto;
+    max-width: none;
+    text-align: center;
+    font-size: 1.15rem;
+    padding: 1rem;
+    transition: opacity 0.4s ease, transform 0.3s ease;
+    border-radius: 50px;
+  }
+
+  .cta-fixed.show {
+    transform: scale(1);
+  }
+
+  .cta-fixed.hide {
+    transform: scale(0.95);
+  }
+
   .testimonial-carousel {
     overflow-x: hidden;
   }
+
+  .testimonial-wrapper {
+    flex-wrap: nowrap;
+    width: 300%;
+  }
+
+  .testimonial {
+    flex: 0 0 100%;
+    max-width: 100%;
+    padding: 1.5rem 1rem;
+    box-sizing: border-box;
+    background-color: #fdfdfd;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+    margin-bottom: 1rem;
+    animation: fadeInUp 0.5s ease-in-out both;
+  }
+
+  .testimonial p {
+    font-size: 1rem;
+  }
+
+  .client-info div {
+    font-size: 0.75rem;
+  }
+
+  @keyframes fadeInUp {
+    from {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+}
 
   .testimonial-wrapper {
     flex-wrap: nowrap;
@@ -400,6 +474,27 @@ form input {
   transition: opacity 0.4s ease;
 }
 
+/* Fade-in animation for general sections and content */
+@keyframes fadeInUpGeneral {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.fade-in {
+  opacity: 0;
+  transform: translateY(20px);
+  animation: fadeInUpGeneral 0.7s ease-out forwards;
+}
+
+.fade-in.delay-1 { animation-delay: 0.2s; }
+.fade-in.delay-2 { animation-delay: 0.4s; }
+.fade-in.delay-3 { animation-delay: 0.6s; }
 </style>
 </head>
 <body>
@@ -422,7 +517,7 @@ form input {
     </div>
   </nav>
 
-  <section id="home">
+  <section class="fade-in delay-1" id="home">
     <h1>Uw partner in een datagedreven wereld</h1>
     <p>
       Schmidt Analytics is gespecialiseerd in data-analyse, data engineering, Power BI-ontwikkeling en advies. Wij bouwen oplossingen vanuit de vraag – niet vanuit de techniek.
@@ -430,7 +525,7 @@ form input {
   </section>
 
   
-<section id="diensten" class="info-block">
+<section class="fade-in delay-2" id="diensten" class="info-block">
   <h2>Diensten</h2>
   <div class="usp-list">
     <div class="usp-item"><span class="icon">📈</span><p><strong>Data-analyse</strong><br>Inzichten uit data halen om beter te sturen.</p></div>
@@ -446,7 +541,7 @@ form input {
   
   
 
-<section id="usp" class="info-block">
+<section class="fade-in delay-3" id="usp" class="info-block">
   <h2>Waarom kiezen voor Schmidt Analytics?</h2>
   <div class="usp-list">
     <div class="usp-item"><span class="icon" style="color: var(--support);">📊</span><p><strong>Ervaren data-experts</strong><br>Meer dan 10 jaar ervaring in data-analyse, engineering en BI.</p></div>
@@ -458,7 +553,7 @@ form input {
 
 
 
-<section id="testimonials">
+<section class="fade-in delay-1" id="testimonials">
     <h2>Wat onze partners zeggen</h2>
     
 <div class="testimonial-carousel" id="testimonialCarousel">
@@ -470,7 +565,7 @@ form input {
   
     </div>
   </section>
-<section id="over-ons">
+<section class="fade-in delay-2" id="over-ons">
     <h2>Over ons</h2>
     <p><strong>Wij geloven dat elke organisatie beter presteert met goed georganiseerde data.</strong><br><br>
       Wij zijn een team van data-experts met passie voor eenvoud en effectiviteit. Onze aanpak is pragmatisch: we beginnen bij uw vraag en bouwen van daaruit een passende oplossing. Ons doel is om organisaties écht datagedreven te laten werken.
@@ -480,7 +575,7 @@ form input {
   
   
 
-  <section id="contact">
+  <section class="fade-in delay-3" id="contact">
     <h2>Contact</h2>
     <p>
       Interesse in een samenwerking of vrijblijvend advies? Stuur ons een bericht via <a href="mailto:info@schmidt-analytics.nl">info@schmidt-analytics.nl</a>.
@@ -631,4 +726,3 @@ form input {
 
 </body>
 </html>
-
