--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="nl">
 <head>
@@ -495,13 +494,161 @@ form input {
 .fade-in.delay-1 { animation-delay: 0.2s; }
 .fade-in.delay-2 { animation-delay: 0.4s; }
 .fade-in.delay-3 { animation-delay: 0.6s; }
+
+/* Layout inspired by Creative Corner */
+section {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 4rem 1.5rem;
+}
+
+.usp-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+  justify-content: center;
+}
+
+.usp-item {
+  background: #ffffff;
+  border: 1px solid #e0e0e0;
+  border-radius: 12px;
+  padding: 2rem;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+  text-align: center;
+  flex: 1 1 260px;
+  transition: transform 0.3s ease;
+  animation: fadeInUp 0.6s ease both;
+}
+
+.usp-item:hover {
+  transform: translateY(-5px);
+}
+
+.usp-item .icon {
+  font-size: 2rem;
+  color: var(--support);
+  margin-bottom: 1rem;
+}
+
+#diensten h2, #usp h2 {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+
+header {
+  background-color: white;
+  padding: 0.5rem 1rem;
+  border-bottom: 1px solid #ddd;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+header img {
+  height: 70px;
+}
+
+footer {
+  background-color: #f8f8f8;
+  border-top: 1px solid #ddd;
+  padding: 2rem 1rem;
+  text-align: center;
+  font-size: 0.9rem;
+  color: #666;
+}
+
+
+.nav-links a {
+  text-decoration: none;
+  color: var(--primary);
+  font-weight: bold;
+  padding-bottom: 4px;
+  position: relative;
+  transition: color 0.3s ease;
+}
+
+.nav-links a::after {
+  content: "";
+  position: absolute;
+  width: 0%;
+  height: 2px;
+  background: var(--accent);
+  left: 0;
+  bottom: 0;
+  transition: width 0.3s ease;
+}
+
+.nav-links a:hover {
+  color: var(--accent);
+}
+
+.nav-links a:hover::after {
+  width: 100%;
+}
+
+
+nav {
+  position: sticky;
+  top: 0;
+  background-color: white;
+  border-bottom: 1px solid #eee;
+  z-index: 1000;
+  transition: box-shadow 0.3s ease, background-color 0.3s ease;
+}
+
+nav.scrolled {
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+  background-color: #ffffff;
+}
+
+
+.mobile-contact-bar {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .mobile-contact-bar {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: var(--support);
+    display: flex;
+    justify-content: space-around;
+    padding: 0.75rem;
+    z-index: 3000;
+  }
+
+  .mobile-contact-bar a {
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+    font-size: 1rem;
+  }
+}
+
 </style>
 </head>
 <body>
 
   <header>
     <div class="header-container">
-      <img src="https://schmidtanalytics.github.io/Logo.png" alt="Schmidt Analytics logo" />
+      <img loading="lazy" src="https://schmidtanalytics.github.io/Logo.png" alt="Schmidt Analytics logo" />
       <button class="menu-toggle" aria-label="Menu openen/sluiten" aria-expanded="false">&#9776;</button>
     </div>
   </header>
@@ -558,9 +705,9 @@ form input {
     
 <div class="testimonial-carousel" id="testimonialCarousel">
   <div class="testimonial-wrapper" id="testimonialWrapper">
-    <div class="testimonial"><p>“Schmidt Analytics hielp ons om onze data écht strategisch in te zetten.”</p><div class="client-info"><img src="https://via.placeholder.com/60" alt="Bedrijfslogo A" /><div><strong>J. de Vries</strong><br /><span>Data Manager, Bedrijf A</span></div></div></div>
-    <div class="testimonial"><p>“Heldere dashboards, snelle levering, en altijd gericht op de vraag.”</p><div class="client-info"><img src="https://via.placeholder.com/60" alt="Bedrijfslogo B" /><div><strong>M. Janssen</strong><br /><span>Operations, Bedrijf B</span></div></div></div>
-    <div class="testimonial"><p>“Door hun ondersteuning zijn we veel efficiënter gaan rapporteren.”</p><div class="client-info"><img src="https://via.placeholder.com/60" alt="Bedrijfslogo C" /><div><strong>A. Willems</strong><br /><span>Directeur, Bedrijf C</span></div></div></div>
+    <div class="testimonial"><p>“Schmidt Analytics hielp ons om onze data écht strategisch in te zetten.”</p><div class="client-info"><img loading="lazy" src="https://via.placeholder.com/60" alt="Bedrijfslogo A" /><div><strong>J. de Vries</strong><br /><span>Data Manager, Bedrijf A</span></div></div></div>
+    <div class="testimonial"><p>“Heldere dashboards, snelle levering, en altijd gericht op de vraag.”</p><div class="client-info"><img loading="lazy" src="https://via.placeholder.com/60" alt="Bedrijfslogo B" /><div><strong>M. Janssen</strong><br /><span>Operations, Bedrijf B</span></div></div></div>
+    <div class="testimonial"><p>“Door hun ondersteuning zijn we veel efficiënter gaan rapporteren.”</p><div class="client-info"><img loading="lazy" src="https://via.placeholder.com/60" alt="Bedrijfslogo C" /><div><strong>A. Willems</strong><br /><span>Directeur, Bedrijf C</span></div></div></div>
   </div>
   
     </div>
@@ -724,5 +871,24 @@ form input {
   window.addEventListener('load', resetInactivityTimer);
 </script>
 
+
+<script>
+  const nav = document.querySelector('nav');
+  window.addEventListener('scroll', () => {
+    if (window.scrollY > 10) {
+      nav.classList.add('scrolled');
+    } else {
+      nav.classList.remove('scrolled');
+    }
+  });
+</script>
+
+
+<div class="mobile-contact-bar">
+  <a href="mailto:info@schmidt-analytics.nl">✉️ Mail ons</a>
+  <a href="tel:+31612345678">📞 Bel ons</a>
+</div>
+
 </body>
 </html>
+
