--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     header {
   background-color: white;
   padding: 0.5rem 1rem;
-  border-bottom: 1px solid #ddd;
+  
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -61,7 +61,7 @@ header img {
       position: sticky;
       top: 0;
       background-color: white;
-      border-bottom: 1px solid #ccc;
+      
       z-index: 1000;
     }
 
@@ -561,7 +561,7 @@ section {
 header {
   background-color: white;
   padding: 0.5rem 1rem;
-  border-bottom: 1px solid #ddd;
+  
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -620,7 +620,7 @@ nav {
   position: sticky;
   top: 0;
   background-color: white;
-  border-bottom: 1px solid #eee;
+  
   z-index: 1000;
   transition: box-shadow 0.3s ease, background-color 0.3s ease;
 }
@@ -660,6 +660,12 @@ nav.scrolled {
     text-decoration: none;
     font-size: 1rem;
   }
+}
+  
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
   </style>
  </head>
@@ -836,11 +842,10 @@ nav.scrolled {
         <strong>
          J. de Vries
         </strong>
-        <br>
-         <span>
-          Data Manager, Bedrijf A
-         </span>
-        </br>
+        <br/>
+        <span>
+         Data Manager, Bedrijf A
+        </span>
        </div>
       </div>
      </div>
@@ -854,11 +859,10 @@ nav.scrolled {
         <strong>
          M. Janssen
         </strong>
-        <br>
-         <span>
-          Operations, Bedrijf B
-         </span>
-        </br>
+        <br/>
+        <span>
+         Operations, Bedrijf B
+        </span>
        </div>
       </div>
      </div>
@@ -872,11 +876,10 @@ nav.scrolled {
         <strong>
          A. Willems
         </strong>
-        <br>
-         <span>
-          Directeur, Bedrijf C
-         </span>
-        </br>
+        <br/>
+        <span>
+         Directeur, Bedrijf C
+        </span>
        </div>
       </div>
      </div>
