--- a/index.html
+++ b/index.html
@@ -32,12 +32,15 @@
     header {
   background-color: white;
   padding: 0.5rem 1rem;
-  
   display: flex;
   align-items: center;
   justify-content: space-between;
   max-width: 1200px;
   margin: 0 auto;
+}
+
+header img {
+  height: 70px;
 }
 
 header img {
@@ -561,12 +564,15 @@ section {
 header {
   background-color: white;
   padding: 0.5rem 1rem;
-  
   display: flex;
   align-items: center;
   justify-content: space-between;
   max-width: 1200px;
   margin: 0 auto;
+}
+
+header img {
+  height: 70px;
 }
 
 header img {
@@ -668,6 +674,17 @@ nav.scrolled {
   align-items: center;
 }
   </style>
+  <meta content="Schmidt Analytics helpt bedrijven met data-analyse, Power BI dashboards, Microsoft Fabric en datagedreven strategieën." name="description"/>
+  <meta content="Schmidt Analytics | Uw partner in data-analyse en Power BI" property="og:title"/>
+  <meta content="Specialist in Power BI, data-analyse, Microsoft Fabric en strategisch datagebruik." property="og:description"/>
+  <meta content="website" property="og:type"/>
+  <meta content="https://www.schmidt-analytics.nl" property="og:url"/>
+  <meta content="https://schmidtanalytics.github.io/Logo.png" property="og:image"/>
+  <meta content="summary_large_image" name="twitter:card"/>
+  <meta content="Schmidt Analytics | Data-analyse en Power BI" name="twitter:title"/>
+  <meta content="Transformeer uw organisatie met datagedreven inzichten en slimme dashboards." name="twitter:description"/>
+  <meta content="data-analyse, Power BI, Microsoft Fabric, datagedreven werken, dashboards, BI-consultancy, business intelligence, datavisualisatie" name="keywords"/>
+  <link href="https://www.schmidt-analytics.nl" rel="canonical"/>
  </head>
  <body>
   <header>
