--- a/index.html
+++ b/index.html
@@ -673,6 +673,10 @@ nav.scrolled {
   justify-content: space-between;
   align-items: center;
 }
+  
+section {
+  scroll-margin-top: 80px;
+}
   </style>
   <meta content="Schmidt Analytics helpt bedrijven met data-analyse, Power BI dashboards, Microsoft Fabric en datagedreven strategieën." name="description"/>
   <meta content="Schmidt Analytics | Uw partner in data-analyse en Power BI" property="og:title"/>
@@ -1085,6 +1089,17 @@ nav.scrolled {
       nav.classList.remove('scrolled');
     }
   });
+  </script>
+  <script>
+   document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+  anchor.addEventListener("click", function (e) {
+    e.preventDefault();
+    const target = document.querySelector(this.getAttribute("href"));
+    if (target) {
+      target.scrollIntoView({ behavior: "smooth" });
+    }
+  });
+});
   </script>
  </body>
 </html>
